--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
 	"name": "LocalBox",
-	"image": "mcr.microsoft.com/devcontainers/go:1.24-trixie",
+	"build": {
+		"dockerfile": "Dockerfile.dev",
+		"context": "."
+	},
 	"features": {
 		"ghcr.io/devcontainers/features/nix:1": {
 			"extraNixConfig": "experimental-features = nix-command flakes"
@@ -23,8 +26,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"golang.go",
-				"jnoortheen.nix-ide"
+				"golang.go"
 			]
 		}
 	},
