chore: change sandbox paths

--- a/isolate.conf
+++ b/isolate.conf
@@ -3,16 +3,16 @@
 # All sandboxes are created under this directory.
 # To avoid symlink attacks, this directory and all its ancestors
 # must be writeable only to root.
-box_root = /var/lib/isolate
+box_root = /var/lib/localbox
 
 # Directory where lock files are created.
-lock_root = /run/isolate/locks
+lock_root = /run/localbox/locks
 
 # Control group under which we place our subgroups
 # Either an explicit path to a subdirectory in cgroupfs, or "auto:file" to read
 # the path from "file", where it is put by isolate-cg-helper.
 # cg_root = /sys/fs/cgroup/isolate.slice/isolate.service
-cg_root = /sys/fs/cgroup/isolate
+cg_root = /sys/fs/cgroup/localbox
 
 # Block of UIDs and GIDs reserved for sandboxes
 first_uid = 60000
