fix: add missing id to build and push step in publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,7 @@ jobs:
             type=semver,pattern={{major}}
       
       - name: Build and push Container image
+        id: push
         uses: docker/build-push-action@v5
         with:
           context: .
