--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       image: golang:1.25-alpine
       options: >-
         --privileged
-        --volume /sys/fs/cgroup:/sys/fs/cgroup:rw
+        --cgroupns=host
 
     steps:
       - name: Checkout code
